--- a/catalog/index.html
+++ b/catalog/index.html
@@ -12,6 +12,7 @@
 	</head>
 	<body mol_view_root>
 		<div mol_view_root='$giper_balls_catalog'></div>
+		<script src="https://yookassa.ru/checkout-widget/v1/checkout-widget.js"></script>
 		<script src='web.js' charset='utf-8'></script>
 	</body>
 </html>
